<package format="2">

  <name>camera_info_manager_py</name>
  <version>0.2.3</version>
  <description>
    Python interface for camera calibration information.

    This ROS package provides a CameraInfo interface for Python camera
    drivers similar to the C++ camera_info_manager package.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/camera_info_manager_py</url>
  <url type="repository">https://github.com/ros-perception/camera_info_manager_py.git</url>
  <url type="bugtracker">https://github.com/ros-perception/camera_info_manager_py/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>python-yaml</exec_depend>

  <test_depend>camera_info_manager</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>

